package ar.edu.utn.frba.dds.Hechos;

public class Categoria {
    private String nombre;

    public Categoria(String nombre) {
        this.nombre = nombre;
    }

    //TODO ver como verificar si una categoria ya existe para no duplicarlas
}
